--- a/sports.html
+++ b/sports.html
@@ -38,6 +38,20 @@
         margin-bottom: 10px;
         font-size: 1.2em;
     }
+        /* Table style */
+    table { 
+        width: 100%; 
+        border-collapse: collapse; 
+        margin-top: 10px; 
+    }
+    th, td { 
+        border: 1px solid black; 
+        padding: 10px; 
+        text-align: center; 
+    }
+    th { 
+        background-color: #333; 
+        color: white; 
 </style>
 </head>
 <body>
