--- a/sports.html
+++ b/sports.html
@@ -18,23 +18,24 @@
     /* CSS Grid to display two tables side by side and then fill in with another pair of tables */
     .tables-container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr); /* Create 2 columns */
-        gap: 20px; /* Space between the tables */
+        justify-content: space-between;
         margin-top: 20px;
     }
+     /* Style for each table's wrapper */
+    .table-wrapper {
+        text-align: left;
 
+     /* Title style */
+    h3 {
+        margin-bottom: 10px;
+        font-size: 1.2em;
     }
-
+        
     /* Table style */
     table { width: 100%; border-collapse: collapse; margin-top: 10px; }
     th, td { border: 1px solid black; padding: 10px; text-align: center; }
     th { background-color: #333; color: white; }
 
-    /* Title style */
-    h3 {
-        margin-bottom: 10px;
-        font-size: 1.2em;
-    }
 </style>
 </head>
 <body>
