--- a/sports.html
+++ b/sports.html
@@ -18,7 +18,7 @@
     /* CSS Grid to display two tables side by side and then fill in with another pair of tables */
     .tables-container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr); /* Two columns */
+        grid-template-columns: repeat(4, 1fr); /* four columns */
         gap: 20px; /* Space between tables */
         margin-top: 20px;
     }
