--- a/sports.html
+++ b/sports.html
@@ -18,7 +18,7 @@
     /* CSS Grid to display two tables side by side and then fill in with another pair of tables */
     .tables-container {
         display: grid;
-        grid-template-columns: 1fr 1fr; /* 2 columns */
+        grid-template-columns: auto; /* 2 columns */
         gap: 20px; /* Space between tables */
         margin-top: 20px;
     }
