--- a/sports.html
+++ b/sports.html
@@ -135,6 +135,7 @@
             // Load stats
             loadStats('mlb_leader_stats_table.json', 'baseball-stats');
             loadStats('nfl_leader_stats_table.json', 'football-stats');
+            loadStats('nba_leader_stats_table.json', 'basketball-stats');
         });
     </script>
 </body>
