--- a/sports.html
+++ b/sports.html
@@ -79,7 +79,7 @@
 
         <div id="basketball" class="content">
             <h2>Basketball</h2>
-            <p>Coming soon...</p>
+            <div id="basketball-stats" class="tables-container"></div>
         </div>
         <div id="soccer" class="content">
             <h2>Soccer</h2>
