--- a/catalog.html
+++ b/catalog.html
@@ -205,7 +205,13 @@
                 renderPosts(archivedPosts, true);
             });
 
-            renderPosts(storedPosts, false);
+            // Automatically select the correct tab if redirected from post.html
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.get("tab") === "newPosts") {
+                newPostsTab.click();
+            } else {
+                renderPosts(storedPosts, false); // Default to new posts
+            }
         });
     </script>
 
