--- a/catalog.html
+++ b/catalog.html
@@ -130,6 +130,7 @@
 
             let storedPosts = JSON.parse(localStorage.getItem("posts")) || [];
             let archivedPosts = JSON.parse(localStorage.getItem("archivedPosts")) || [];
+            let loggedInUser = localStorage.getItem("loggedInUser"); 
 
             function renderPosts(posts, isArchived) {
                 postsContainer.innerHTML = "";
@@ -139,34 +140,35 @@
                     return;
                 }
 
-                [...posts].reverse().forEach((post, index) => {
+                posts.reverse().forEach((post, index) => {
                     let postElement = document.createElement("div");
                     postElement.classList.add("post");
 
                     postElement.innerHTML = `
                         <h2>${post.title}</h2>
-                        <p><strong>Posted by:</strong> ${post.username || "Anonymous"}</p>
                         <p>${post.description}</p>
                         ${post.link ? `<a href="${post.link}" target="_blank">Read more</a>` : ""}
                         <p><small>Posted on ${new Date(post.timestamp).toLocaleString()}</small></p>
                     `;
 
-                    if (!isArchived) {
-                        let archiveButton = document.createElement("button");
-                        archiveButton.classList.add("archive-btn");
-                        archiveButton.textContent = "Archive";
-                        archiveButton.onclick = function() {
-                            archivePost(index);
-                        };
-                        postElement.appendChild(archiveButton);
-                    } else {
-                        let deleteButton = document.createElement("button");
-                        deleteButton.classList.add("delete-btn");
-                        deleteButton.textContent = "Delete";
-                        deleteButton.onclick = function() {
-                            deletePost(index);
-                        };
-                        postElement.appendChild(deleteButton);
+                    if (loggedInUser) {
+                        if (!isArchived) {
+                            let archiveButton = document.createElement("button");
+                            archiveButton.classList.add("archive-btn");
+                            archiveButton.textContent = "Archive";
+                            archiveButton.onclick = function() {
+                                archivePost(index);
+                            };
+                            postElement.appendChild(archiveButton);
+                        } else {
+                            let deleteButton = document.createElement("button");
+                            deleteButton.classList.add("delete-btn");
+                            deleteButton.textContent = "Delete";
+                            deleteButton.onclick = function() {
+                                deletePost(index);
+                            };
+                            postElement.appendChild(deleteButton);
+                        }
                     }
 
                     postsContainer.appendChild(postElement);
@@ -205,12 +207,7 @@
                 renderPosts(archivedPosts, true);
             });
 
-            const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get("tab") === "newPosts") {
-                newPostsTab.click();
-            } else {
-                renderPosts(storedPosts, false);
-            }
+            renderPosts(storedPosts, false);
         });
     </script>
 
