--- a/post.html
+++ b/post.html
@@ -78,27 +78,18 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            // Wait until the DOM is fully loaded
             const postForm = document.getElementById("postForm");
             const postTitle = document.getElementById("postTitle");
-            const postLink = document.getElementById("postLink");
+            const postLink = document.getElementById("postLink"); // Correct reference to the link input
             const postDescription = document.getElementById("postDescription");
 
             postForm.addEventListener("submit", function(event) {
                 event.preventDefault();  // Prevent the default form submission
 
-                // Ensure elements exist
-                if (!postTitle || !postDescription) {
-                    console.error("Form elements not found.");
-                    return;
-                }
-
-                // Get values from form
                 let title = postTitle.value.trim();
-                let link = postLink.value.trim();
+                let link = postLink.value.trim(); // Use postLink instead of linkElement
                 let description = postDescription.value.trim();
 
-                // Check that title and description are filled out
                 if (title && description) {
                     let newPost = {
                         title: title,
@@ -107,22 +98,13 @@
                         timestamp: new Date().toISOString()
                     };
 
-                    // Retrieve existing posts from localStorage or initialize an empty array
                     let storedPosts = JSON.parse(localStorage.getItem("posts")) || [];
-
-                    // Add the new post to the array
                     storedPosts.push(newPost);
-
-                    // Store the updated posts array in localStorage
                     localStorage.setItem("posts", JSON.stringify(storedPosts));
 
-                    // Provide feedback to the user
                     alert("Your post has been submitted successfully!");
-
-                    // Redirect to catalog page where posts are displayed
                     window.location.href = "catalog.html"; 
                 } else {
-                    // If the title or description is missing, show an alert
                     alert("Please fill out all required fields.");
                 }
             });
