--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
 
             let storedPosts = JSON.parse(localStorage.getItem("posts")) || [];
             let archivedPosts = JSON.parse(localStorage.getItem("archivedPosts")) || [];
-            let loggedInUser = localStorage.getItem("loggedInUser"); 
+            let loggedInUser = localStorage.getItem("loggedInUser");
 
             function renderPosts(posts, isArchived) {
                 postsContainer.innerHTML = "";
@@ -146,6 +146,7 @@
 
                     postElement.innerHTML = `
                         <h2>${post.title}</h2>
+                        <p><strong>Posted by:</strong> ${post.username}</p> <!-- Show the username -->
                         <p>${post.description}</p>
                         ${post.link ? `<a href="${post.link}" target="_blank">Read more</a>` : ""}
                         <p><small>Posted on ${new Date(post.timestamp).toLocaleString()}</small></p>
