--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            text-align: left;
+            text-align: center;
         }
 
         /* Page Content */
